[gd_scene load_steps=3 format=2]

[ext_resource path="res://debug_unit_test.gd" type="Script" id=1]
[ext_resource path="res://elements/terrainv2/TerrainChunk.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TerrainChunk" parent="." instance=ExtResource( 2 )]
position = Vector2( -10.5944, 902.662 )
scale = Vector2( 0.7, 0.7 )

[node name="Button" type="Button" parent="."]
margin_right = 123.0
margin_bottom = 46.0
text = "Go to main game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1326.45
margin_top = 33.9028
margin_right = 1452.45
margin_bottom = 81.9028
text = "Generate chunk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 1209.76
margin_top = 35.3568
margin_right = 1317.76
margin_bottom = 80.3568
prefix = "Seed: "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
